--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
+@import "./assets/reset.css";
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,26 +11,405 @@
   }
 }
 
+
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  background-image: url("../src/assets/image/sky.jpg");
+  width: 100%;
+  position: fixed;
+  top:0;
+  text-align: center;
+  
+}
+.over-layer{
+  width:100%;
+  height:100%;
+  background:rgba(0,0,0,0.6);
+  position:absolute;
+}
+.main{
+  margin-left:300px;
+  text-align: center;
+}
+.menu_opener{
+  display: none;
+}
+.container_body{
+background:rgba(29,29,29,0.85);
+width:100%;
+height: 100vh;
+filter: blur(8px);
+-webkit-filter: blur(8px);
+}
+.App-header-name h1{
+ margin-bottom:.23rem;
+}
+.name_intro{
+  position:absolute;
+  top:40%;
+  left: 40%;
+  color:white;
+  z-index: 20;
+}
+.name_intro h1{
+  font-size:4rem;
+  text-transform:capitalize;
+  font-weight: 500;
+  font-family: 'Playfair Display', serif;
+}
+.name_intro p{
+  font-size:1.3rem;
+  font-weight: 500;
+}
+.side_bar_nav{
+  background-color: #17181B;
+  width: 20vw;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left:0;
+  z-index: 20;
+  transition: width 0.3s ease-out;
+}
+
+.profile_image{
+  background-image:url("https://media-exp1.licdn.com/dms/image/C4E03AQFO4VEaJqEiLQ/profile-displayphoto-shrink_400_400/0/1533666284275?e=1614816000&v=beta&t=IO_RX_ReShNyJVOn6fyIGiAfdSDtsw8r0OHsT3N2jCc");
+  background-position: center;
+  background-size:cover;
+  width:100%;
+  height: 200px;
+  position: relative;
+  background-repeat: no-repeat;
+  
+}
+
+.profile_name{
+  position:absolute;
+  bottom:0px;
+  /* background-color:rgba(21, 80, 199, 0.6); */
+  background-color:#f2eeeb;
+  width: 100%;
+  padding:10px 0 10px;
+  text-align: center;
+ z-index: 1;
+}
+.profile_name h1{
+  font-size: 20px;
+  font-family: playfair,sans-serif;
+  font-weight: 600;
+  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  font-style: italic;
+  color:#777;
+}
+.menu_list{
+  margin-top:20px;
+  padding-left:20px
+}
+.menu_list li {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  flex-direction: row;
+  list-style: none;
+  padding:5px;
+  border-bottom: 1px solid #202226;
+  padding-bottom: 30px;
+  padding-top: 25px;
+  font-size: 20px;
+  letter-spacing: 1px;
+  
   }
-  to {
-    transform: rotate(360deg);
+  .menu_list li span{
+    padding-right:6px;
+    color: #777;
+    cursor: pointer;
   }
-}
+ 
+  .menu_list .menu_link{
+    color: #777;
+    text-decoration: none;
+
+  }
+  .time_date{
+    margin-top:30px;
+    padding-top:20px;
+    text-align: center;
+    color:#777;
+  }
+
+  /*  start of About me */
+  .about_me{
+    padding-top:20px;
+  }
+  .aboutMe{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items: center;
+    text-align: center;
+    border-bottom: 1px dashed #ffffff;
+    margin-bottom: 68px;
+   
+  }
+  .profile_title{
+    font-size: 3rem;
+    font-weight: 700;
+    color:white;
+    padding-top:20px;
+    margin-top:1px;
+    color: rgba(105, 124, 161,0.6);
+    
+  }
+  .profile_icon{
+   
+    font-size: 3rem;
+    font-weight: 700;
+    color:white;
+    padding-top:20px;
+    padding-right:20px;
+    color: rgba(105, 124, 161,0.6);
+    text-align: right;
+  }
+
+  .profile-des{
+    display: grid;
+    grid-template-columns: 400px 400px;
+    grid-gap:23px;
+    width:900px;
+    margin-top:20px;
+    padding-top:20px;
+    padding-right:15px;
+
+  }
+  .profile_title_des h1 {
+    color: rgb(255, 254, 254);
+    font-size: 30px;
+    font-weight:600;
+    margin: 30px 30px 30px 0px;
+    text-transform:capitalize;
+    text-align:left;
+  }
+  .profile_title_des {
+    text-align: left;
+    color: rgb(255, 254, 254);
+    font-weight: 400;
+    font-size: 18px;
+    /* font-family: 'Playfair Display',sans-serif; */
+    line-height: 21px;
+    letter-spacing: 4px;
+  }
+  .profile_title_des  p{
+    color: rgb(255, 254, 254);
+    font-size: 14px;
+    line-height: 25px;
+    font-family: 'roboto',sans-serif;
+
+  
+  }
+  .profile_title_des li {
+    text-align: left;
+    color: rgb(255, 254, 254);
+    font-weight: 400;
+    font-size: 18px;
+   font-family: 'Playfair Display',sans-serif;
+    line-height: 21px;
+    letter-spacing: 4px;
+    padding-bottom: 10px;
+  }
+  .profile_title_des .text {
+    text-align: left;
+    color:#fff;
+    font-weight: 900;
+    font-size: 22px;
+    font-family: 'sans-serif';
+    font-weight: 700;
+    border-bottom: 2px solid #343c50;
+  }
+  .profile_title_des .value{
+   color:rgb(206 194 194);
+    font-size:18px;
+    font-family: 'Playfair Display',sans-serif;
+    padding-bottom: 10px;
+   
+  }
+  /* Portfolio begin */
+  .portfolio_heading{
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+  
+   
+  }
+  .portfolio_heading ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    border-radius: 40px;
+   border:1px dashed #ffffff;
+   padding: 15px;
+   }
+   .portfolio_heading ul li{
+   padding:0 13px 0 13px;
+   color: #e1e1e1;
+   font-size: 20px;
+   font-weight: 700;
+   font-family: 'Roboto',sans-serif;
+   cursor: pointer;
+   /* transition: all 1s ease-in-out; */
+  
+   }
+   
+   .portfolio_heading ul li:hover{
+    color:#17181B;
+   
+   
+    }
+    .project_container{
+    margin-top:15px;
+    display:grid;
+    grid-gap:20px;
+    grid-template-columns: 1fr 1fr 1fr ;
+    width: 900px;
+    padding-bottom: 20px;
+
+    }
+    .flip-card img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+  
+    }
+    .flip-card {
+      background-color: transparent;
+      width: 300px;
+      height: 300px;
+      perspective: 1000px;
+      cursor: pointer;
+    }
+    
+    .card_inner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      transition: transform 0.6s;
+      transform-style: preserve-3d;
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
+    
+    .flip-card:hover .card_inner {
+      transform: rotateY(180deg);
+    }
+    
+    .card_front, .card_back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+    }
+    
+    .card_front {
+      background-color: #bbb;
+      color: black;
+    }
+    
+    .card_back {
+      /* background-color: #17181B;; */
+      background-color:transparent;
+      color: white;
+      transform: rotateY(180deg);
+      position: relative;
+    }
+    .card_back_text {
+  position:absolute;
+  top:18%;
+  text-align:left;
+  padding:20px;
+  
+    }
+    .card_back_text h1 {
+      text-align: left;
+      color:#fff;
+      font-size: 16px;
+      font-family: 'Poppins', sans-serif;
+      padding-bottom: 15px;
+      text-transform: capitalize;
+        }
+        .card_back_text span {
+          font-size: 12px;
+          font-family: 'Poppins', sans-serif;
+          padding-bottom: 10px;
+      }
+        
+               
+        /* mobile */
+
+        @media only screen and (max-width: 600px) {
+          .name_intro{
+            left:0
+          }
+          .name_intro h1{
+          font-size:2rem
+          }
+          .name_intro p{
+            font-size:1.2rem
+            }
+          .main{
+            margin-left:20px;
+            text-align: center;
+          }
+        
+         .side_bar_nav{
+           width:40vw;
+         
+         }
+         .project_container{
+          grid-template-columns: 1fr;
+          width:600px;
+         }
+         .flip-card {
+           width:100%;
+         }
+         .profile_title {
+          margin-right: 16px;
+         }
+         .portfolio_heading ul{
+           display: block;
+         }
+         .portfolio_heading ul li{
+          padding: 10px 13px 10px 13px;
+         }
+         .menu_opener{
+           display: block;
+         }
+        }
+        @media only screen and (max-width: 477px) {
+          
+          
+        
+         }
+        
+        @media only screen and (max-width: 375px) {
+          .side_bar_nav{
+            width:60vw;
+          }
+          .menu_list li{
+            font-size: 16px;
+          }
+         
+        
+  .profile-des{
+    grid-template-columns: 400px;
+    
+  }
+  .profile_title_des {
+   width:300px; 
+  }
+  .profile-des h1{
+    font-size:22px
+    
+  }
+
+  
+       }
+        
